recursion.cons.length.Length.scala.error
Compilation error:
Length:6: error: not enough arguments for method apply: (n: Int)Int in trait LinearSeqOptimized.
Unspecified value parameter n.
  return 1 + length(l.tail())
                          ^